@@ -7,6 +7,7 @@ Cacti CHANGELOG
 -bug#0001160: In Suggested Values editor, name and field are reversed. Include column headers
 -bug#0001182: Subdirectories are not secure and allow browsing
 -bug#0001306: Empty COMMENT + <HR> gives you a blank legend line (was: Add Blank Line to Graph via Pull down menu)
+-bug#0001345: Overwriting $snmp_index in query_snmp_host() breaks SNMP Data query if using get method
 -bug#0001346: Strip out noisy 'No Such Instance currently exists at this OID' 
 -bug#0001359: Better error checking in rrd.php
 -bug#0001404: timeout in "function ping_icmp" (lib/ping.php)
